--- a/contents/04-dimension.qmd
+++ b/contents/04-dimension.qmd
@@ -7,5 +7,20 @@ format:
       - \usepackage{mathtools}
 --- 
 
-* Slides: [link](../slides/06-dimension-slides.qmd)
+* Slides: [link](../slides/04-dimension-slides.qmd)
+
+* TD: [link](../td/04-dimension-td.qmd)
+
+* TP: [link](../td/04-dimension-tp.qmd)
+
+## Sommaire
+
+1. [Analyse en composantes principales](./dimension/01-pca.qmd)
+
+2. [Analyse des correspondances multiples](./dimension/02-mca.qmd)
+
+3. [Méthodes à noyaux](./dimension/03-kernel.qmd)
+
+
+![Flatland ([xkcd:721](https://xkcd.com/721/)).](../include/flatland.png)
 
